# dailys

./: .env.example  .gitignore  App.tsx  DEPLOY.md  README.md  app.config.ts  app.json  eas.json  package-lock.json  package.json  tsconfig.json
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_timestamptz.py  003_one_active_challenge.py  004_one_squad_per_user.py  005_push_tokens_and_nudges.py
backend/app/: config.py  dependencies.py  main.py  security.py  startup.py
backend/app/api/: health.py
backend/app/api/v1/: auth.py  challenges.py  ghost.py  internal.py  reactions.py  router.py  squads.py  submissions.py  uploads.py
backend/app/db/: session.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/queries/: feed.sql  percentile.sql  streak.sql
backend/app/schemas/: __init__.py
backend/app/scripts/: seed_task_templates.py
backend/app/services/: blindfold.py  challenge_release.py  feed.py  ghost.py  history.py  interaction.py  nudges.py  push.py  squad_week.py  squads.py  storage.py  streak.py  verification.py
backend/app/services/verification_providers/: auto_accept.py  base.py  factory.py  (+1 more)
backend/scripts/: entrypoint.sh  seed.py  setup_db.sh
backend/tests/: conftest.py  helpers.py  test_api.py  test_history.py  test_interaction.py  test_migrations.py  test_security.py  test_squad_week.py  test_squads.py  test_storage.py  test_verification_providers.py
(+66 files in other folders)
